testsuite/tests/builtins/str_methods/ends_with/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:1:7 ]
   │
 1 │ print("Hello World".ends_with("rld", suffix="rld"))
   │       ──────────────────────┬─────────────────────  
   │                             ╰─────────────────────── The parameter "suffix" has been provided a positional and a named value
───╯
